--- a/index.html
+++ b/index.html
@@ -12,12 +12,65 @@
     <div class="row">
         <img class="title" src="assets/title.png">
         <div class="buttons">
-            <img class="icon" src="assets/behance b.png">
-            <img class="icon" src="assets/github b.png">
-            <img class="icon" src="assets/discord b.png">
-            <img class="icon" src="assets/insta b.png">
-            <img class="icon" src="assets/twitter b.png">
+            <a href="https://www.behance.net/ArekZajac" target="_blank">
+                <img class="icon" src="assets/behance b.png" onmouseover="behanceHover()" onmouseout="behanceDefault()">
+            </a>
+            <a href="https://github.com/ArekZajac" target="_blank">
+                <img class="icon" src="assets/github b.png" onmouseover="this.src='assets/github a.png'" onmouseout="this.src='assets/github b.png'">
+            </a>
+            <a href="https://discord.com/" target="_blank">
+                <img class="icon" src="assets/discord b.png" onmouseover="this.src='assets/discord a.png'" onmouseout="this.src='assets/discord b.png'">
+            </a>
+            <a href="https://www.instagram.com/arek.pz/" target="_blank">
+                <img class="icon" src="assets/insta b.png" onmouseover="this.src='assets/insta a.png'" onmouseout="this.src='assets/insta b.png'">
+            </a>
+            <a href="https://twitter.com/arek_pz" target="_blank">
+                <img class="icon" src="assets/twitter b.png" onmouseover="this.src='assets/twitter a.png'" onmouseout="this.src='assets/twitter b.png'">
+            </a>
         </div>
     </div>
 </body>
 </html>
+
+<script>
+    function behanceDefault() {
+        document.body.style.backgroundColor="black";
+        this.src='assets/behance b.png'
+    }
+    function behanceHover() {
+        document.body.style.backgroundColor="#031330";
+        this.src='assets/behance a.png'
+    }
+    function githubDefault() {
+        document.body.style.backgroundColor="black";
+        this.src='assets/behance b.png'
+    }
+    function githunHover() {
+        document.body.style.backgroundColor="#031330";
+        this.src='assets/behance a.png'
+    }
+    function discordDefault() {
+        document.body.style.backgroundColor="black";
+        this.src='assets/behance b.png'
+    }
+    function discordHover() {
+        document.body.style.backgroundColor="#031330";
+        this.src='assets/behance a.png'
+    }
+    function instaDefault() {
+        document.body.style.backgroundColor="black";
+        this.src='assets/behance b.png'
+    }
+    function instaHover() {
+        document.body.style.backgroundColor="#031330";
+        this.src='assets/behance a.png'
+    }
+    function twitterDefault() {
+        document.body.style.backgroundColor="black";
+        this.src='assets/behance b.png'
+    }
+    function twitterHover() {
+        document.body.style.backgroundColor="#031330";
+        this.src='assets/behance a.png'
+    }
+</script>
